# apache-beam-pipelines-tuts

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
basic-elt-pipeline-beam/: pyproject.toml  setup.py
basic-elt-pipeline-beam/data/: customers.csv
basic-elt-pipeline-beam/etlpipelien/application/: app.py  pipeline_options.py  utils.py
basic-elt-pipeline-beam/etlpipelien/domain/: customer_model.py
basic-elt-pipeline-beam/etlpipelien/schema/: customer_schema.json
basic-elt-pipeline-beam/logs/: bad-outputs-00000-of-00001
basic-elt-pipeline-beam/scripts/: run.sh
custom-dataflow-flextemplate/: .gcloudignore  Dockerfile  README.md  cloudbuild.yaml  job-metadata  prebuild.Dockerfile  requirements.txt  run.sh  setup.py
custom-dataflow-flextemplate/appp/: main.py
custom-dataflow-flextemplate/appp/libraries/: aggregation_ptransform.py  helper.py  splitting_ptransform.py
data/: data.json
java/: Solution.java
team_league_dataflow_pipeline/: join_test.py
team_league_dataflow_pipeline/applications/: team_league_app.py  team_league_options.py  team_stats_mapper.py
team_league_dataflow_pipeline/domain/: api_out_stats.py  team_best_passer_stats.py  team_scorer_raw.py  team_stats.py  team_stats_raw.py  team_top_scorer_stats.py
team_league_dataflow_pipeline/domain/exceptions/: teams_stats_validation_exception.py
